added map filters + updated swagger schema with image/file upload
